--- a/css/styles.css
+++ b/css/styles.css
@@ -22,19 +22,30 @@
           line-height: 1.1;
     }
     h2 {
-        font-size: 1.1rem;
+        font-size: 1.2rem;
         line-height: 1.05;
         text-align: left;
         padding: 2px;
         border-radius: 2px;
-        margin: 2px;
+        margin: 4px;
   }
-    ul {
+  h3 {
+      font-size: 1.1rem;
+      line-height: 1.05;
+      text-align: left;
+      padding: 2px;
+      border-radius: 2px;
+      margin: 2px;
+}
+
+
+  ul {
         display: flex;
         justify-content: space-evenly;
         flex-direction: column;
         list-style: disc;
-        line-height: 1.25;
+        line-height: 1.5;
+        padding: 2px;
         gap: 5px;
         align items: flex-start;
     }
@@ -45,9 +56,11 @@
     }
    
     p {
+      /* font-family: Georgia, 'Times New Roman', Times, serif; */
       display: flex;
       line-height: 1.2;
       margin: 2px;
+      padding: 2px;
 }
 
 
